changed background colour

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
     </div>
 </button>
 
+<button>
+    <div id="POLITICS">
+        <a href="#">POLITICS</a>
+    </div>
+</button>
+
 <div class="scores-area">
     <p class="scores">CORRECT ANSWERS <span id="SCORE">10</span></p>
     <p class="scores">WRONG ANSWERS <span id="WRONG ANSWERS">10</span></p>
