--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <section>
     <h1>Select Questions</h1>
 </section>
-<div>
+
+
+<div class="container">
+    <div id="question-container" class="hide">
+<div id="questions-section">
     <button>MATHEMATICS</button>
     <button>SCIENCE</button>
     <button>GEOGRAPHY</button>
@@ -19,6 +23,10 @@
     <button>MOVIE</button>
     <button>LITERARY</button>
 </div>
+</div>
+</div>
+
+
 
     <div class="scores-area">
     <p class="scores">CORRECT ANSWERS <span id="SCORE">10</span></p>
