created math.html section for questions and answer, chenged button code for math sction in html to anchor tag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="container">
     <div id="question-container" class="hide">
 <div id="questions-section">
-    <button>MATHEMATICS</button>
+    <a href="math.html">MATHEMATICS</a>
     <button>SCIENCE</button>
     <button>GEOGRAPHY</button>
     <button>SPORTS</button>
