added geography question html, js and created question and answer for the section

--- a/geography.html
+++ b/geography.html
@@ -13,7 +13,7 @@
       <div id="quiz"></div>
       <button id="submit">Get Quiz Result</button>
 
-      <script src="assets/js/science.js"></script>
+      <script src="assets/js/geography.js"></script>
 
 
     </body>
