--- a/index.html
+++ b/index.html
@@ -12,15 +12,28 @@
     <h1>Select Questions</h1>
 </section>
 
+<div id="question-area">
 
-
-    
-<div class="questionssection">
+<div>
     <a href="math.html">MATHEMATICS</a>
+</div>
+    
+<div>
     <a href="science.html">SCIENCE</a>
-    <a href="geograhy.html">GEOGRAPHY</a>
+    </div>
+
+    <div>
+    <a href="geography.html">GEOGRAPHY</a>
+</div>
+
+<div>
     <a href="literary.html">LITERARY</a>
+</div>
+
+<div>
     <a href="sports.html">SPORTS</a>
+</div>
+
 </div>
 
 
