--- a/literary.html
+++ b/literary.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Quiz Game</title>
+    <body>
+      <header>
 
-<body>
-    <div id="img">image</div>
-    <div id="score">0/0</div>
-    <div id="quiz"></div>
-    <button id="submit">Get Quiz Result</button>
+        <ul>
+            <li><a class="active" href="home.html">HOME </a></li>
+            <li><a href="science.html">SCIENCE</a></li>
+            <li> <a href="math.html">MATHEMATICS</a></li>
+            <li><a style="float:right" href="sports.html">SPORTS</a></li>
+        </ul>
+      </header>
 
-    <script src="assets/js/literary.js"></script>
+      <section>
+        <h1>Select Questions</h1>
+      </section>
+      
+      <div id="score">0/0</div>
+      <div id="quiz"></div>
+      <button onclick="displayResults(mathQuestions, quizContainer, scoreContainer)" id="submit">Get Quiz Result</button>
+
+      <script src="assets/js/literary.js"></script>
 
 
-</body>
+    </body>
 
-</html>
+    </html>
