cretaed the quiz app information and details of how to play and what to expect in the home page html

--- a/home.html
+++ b/home.html
@@ -22,4 +22,18 @@
         </ul>
     </header>
 
+    <h1>
+Welcome To The Quiz App
+    </h1>
+    <p>To play, click on any subject above</p>
+    <p>This quiz will help you assess yourself on your knowledge of each subject</p>
+    <h1>How It Works</h1>
+    <p>As you click on any of the subjects to play the quiz, 
+        you will be presented with questions along with option of answers with images...</p>
+        <p>As you choose your answers and submit, your
+             total score for that particular subject is displayed along 
+             with the right and wrong answers and images.</p>
+             <p>As you play with the quiz you are definitely going to have a wonderful time with it.</p>
+
+</div>
     
