added text to home page for user rules and menu to play games, then added style to css for quiz games, adjusted navigation bar to include all other subjects in every subject game page

--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@ Welcome To The Quiz App
         you will be presented with questions along with option of answers with images...</p>
         <p>As you choose your answers and submit, your
              total score for that particular subject is displayed along 
-             with the right and wrong answers and images.</p>
+             with the right and wrong answers and images,</p>
              <p>As you play with the quiz you are definitely going to have a wonderful time with it.</p>
 
 </div>
