--- a/literary.html
+++ b/literary.html
@@ -13,6 +13,7 @@
             <li><a class="active" href="home.html">HOME </a></li>
             <li><a href="science.html">SCIENCE</a></li>
             <li> <a href="math.html">MATHEMATICS</a></li>
+            <li> <a href="geography.html">GEOGRAPHY</a></li>
             <li><a style="float:right" href="sports.html">SPORTS</a></li>
         </ul>
       </header>
