--- a/sports.html
+++ b/sports.html
@@ -25,7 +25,7 @@
       <div id="quiz"></div>
       <button onclick="displayResults(mathQuestions, quizContainer, scoreContainer)" id="submit">Get Quiz Result</button>
 
-      <script src="assets/js/math.js"></script>
+      <script src="assets/js/sports.js"></script>
 
 
     </body>
