edited the css to be mobile responsive for secreen 1200 and 950, repositions the questions and answer radio button, added div and class to radio section in all subject java script code

--- a/geography.html
+++ b/geography.html
@@ -14,7 +14,7 @@
             <li><a href="science.html">SCIENCE</a></li>
             <li> <a href="math.html">MATHEMATICS</a></li>
             <li> <a href="literary.html">LITERARY</a></li>
-            <li><a style="float:right" href="sports.html">SPORTS</a></li>
+            <li><a  href="sports.html">SPORTS</a></li>
         </ul>
       </header>
 
