--- a/science.html
+++ b/science.html
@@ -14,7 +14,7 @@
             <li> <a href="math.html">MATHEMATICS</a></li>
             <li> <a href="geography.html">GEOGRAPHY</a></li>
             <li> <a href="literary.html">LITERARY</a></li>
-            <li><a style="float:right" href="science.html">SPORTS</a></li>
+            <li><a href="science.html">SPORTS</a></li>
         </ul>
       </header>
 
