--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/2d77270c97.js" crossorigin="anonymous"></script>
     <title>Quiz Game</title>
 </head>
 
@@ -13,12 +14,12 @@
     <header>
         
         <ul>
-            <li><a href="home.html">HOME </a></li>
-            <li><a href="math.html">MATHEMATICS </a></li>
-            <li><a href="science.html">SCIENCE</a></li>
-            <li> <a href="geography.html">GEOGRAPHY</a></li>
-            <li> <a href="literary.html">LITERARY</a></li>
-            <li><a href="sports.html">SPORTS</a></li>
+            <li><a href="home.html">HOME </a><i class="fa-solid fa-house-user"></i></li>
+            <li><a href="math.html">MATHEMATICS </a><i class="fa-solid fa-calculator"></i></li>
+            <li><a href="science.html">SCIENCE</a><i class="fa-solid fa-microscope"></i></li>
+            <li> <a href="geography.html">GEOGRAPHY</a><i class="fa-solid fa-globe"></i></li>
+            <li> <a href="literary.html">LITERARY</a><i class="fa-solid fa-book"></i></li>
+            <li><a href="sports.html">SPORTS</a><i class="fa-solid fa-medal"></i></li>
         </ul>
     </header>
 
