--- a/home.html
+++ b/home.html
@@ -37,4 +37,10 @@ Welcome To The Quiz App
              <p>As you play with the quiz you are definitely going to have a wonderful time with it.</p>
 
 </div>
+
+<div>
+    <audio controls autoplay muted>
+        <source src="assets/welcome.mp3">
+      </audio> 
+</div>
     
