quiz span element aligned

--- a/geography.html
+++ b/geography.html
@@ -10,7 +10,7 @@
       <header>
 
         <ul>
-            <li><a class="active" href="home.html">HOME </a></li>
+            <li><a class="active" href="index.html">HOME </a></li>
             <li><a href="science.html">SCIENCE</a></li>
             <li> <a href="math.html">MATHEMATICS</a></li>
             <li> <a href="literary.html">LITERARY</a></li>
