added sound to audio function in index.html and aso refrenced it in my read me file

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@ Welcome To The Quiz App
 
 </div>
 
+
+
+
 <div>
-    <audio controls autoplay muted>
-        <source src="">
+    <audio controls autoplay >
+        <source src="/assets/sound1/240210__shahabazkhan__welcome-to-the-game.flac">
       </audio> 
 </div>
     
