added hidden attribute to the audio function

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Welcome To The Quiz App
 
 
 <div>
-    <audio controls autoplay >
+    <audio controls autoplay hidden >
         <source src="/assets/sound1/240210__shahabazkhan__welcome-to-the-game.flac">
       </audio> 
 </div>
