--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="sports.html">SPORTS</a><i class="fa-solid fa-medal"></i></li>
         </ul>
     </header>
-
+<div id="main-quiz">
     <h1>
 Welcome To The Quiz App
     </h1>
