--- a/literary.html
+++ b/literary.html
@@ -22,10 +22,11 @@
         <h1>Select Questions</h1>
       </section>
       
+    <div id="main-quiz">
       <div id="score">0/0</div>
       <div id="quiz"></div>
       <button onclick="displayResults(mathQuestions, quizContainer, scoreContainer)" id="submit">Get Quiz Result</button>
-
+    </div>
       <script src="assets/js/literary.js"></script>
 
 
