--- a/sports.html
+++ b/sports.html
@@ -21,12 +21,13 @@
       <section>
         <h1>Select Questions</h1>
     </section>
+    <div id="main-quiz">
       <div id="score">0/0</div>
       <div id="quiz"></div>
       <button onclick="displayResults(mathQuestions, quizContainer, scoreContainer)" id="submit">Get Quiz Result</button>
 
       <script src="assets/js/sports.js"></script>
-
+    </div>
 
     </body>
 
