--- a/math.html
+++ b/math.html
@@ -27,6 +27,7 @@
       <div id="score">0/0</div>
       <div id="quiz"></div>
       <button onclick="displayResults(mathQuestions, quizContainer, scoreContainer)" id="submit">Get Quiz Result</button>
+      <div id="emptyAlert"></div>
     </div>
       <script src="assets/js/math.js"></script>
 
