added class and css for focusing on a particular navigation button when any of the buttons is clicked and also added font awesome icons to the navigation buttons of all the pages

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <title>Quiz Game</title>
 </head>
 
-<body>
+<body class="home">
     <header>
         
         <ul>
-            <li><a href="index.html">HOME </a><i class="fa-solid fa-house-user"></i></li>
-            <li><a href="math.html">MATHEMATICS </a><i class="fa-solid fa-calculator"></i></li>
-            <li><a href="science.html">SCIENCE</a><i class="fa-solid fa-microscope"></i></li>
-            <li> <a href="geography.html">GEOGRAPHY</a><i class="fa-solid fa-globe"></i></li>
-            <li> <a href="literary.html">LITERARY</a><i class="fa-solid fa-book"></i></li>
-            <li><a href="sports.html">SPORTS</a><i class="fa-solid fa-medal"></i></li>
+            <li class="home"><a href="index.html">HOME </a><i class="fa-solid fa-house-user"></i></li>
+            <li class="maths"><a href="math.html">MATHEMATICS </a><i class="fa-solid fa-calculator"></i></li>
+            <li class="science"><a href="science.html">SCIENCE</a><i class="fa-solid fa-microscope"></i></li>
+            <li class="geography"> <a href="geography.html">GEOGRAPHY</a><i class="fa-solid fa-globe"></i></li>
+            <li class="literary"> <a href="literary.html">LITERARY</a><i class="fa-solid fa-book"></i></li>
+            <li class="sports"><a href="sports.html">SPORTS</a><i class="fa-solid fa-medal"></i></li>
         </ul>
     </header>
 <div id="main-quiz">
