--- a/math.html
+++ b/math.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/2d77270c97.js" crossorigin="anonymous"></script>
     <title>Quiz Game</title>
-    <body>
+    <body class="maths">
       <header>
        
         <ul>
-            <li><a class="active" href="index.html">HOME </a></li>
-            <li><a href="science.html">SCIENCE</a></li>
-            <li> <a href="geography.html">GEOGRAPHY</a></li>
-            <li> <a href="literary.html">LITERARY</a></li>
-            <li><a  href="sports.html">SPORTS</a></li>
-        </ul>
+          <li class="home"><a href="index.html">HOME </a><i class="fa-solid fa-house-user"></i></li>
+          <li class="maths"><a href="math.html">MATHEMATICS </a><i class="fa-solid fa-calculator"></i></li>
+          <li class="science"><a href="science.html">SCIENCE</a><i class="fa-solid fa-microscope"></i></li>
+          <li class="geography"> <a href="geography.html">GEOGRAPHY</a><i class="fa-solid fa-globe"></i></li>
+          <li class="literary"> <a href="literary.html">LITERARY</a><i class="fa-solid fa-book"></i></li>
+          <li class="sports"><a href="sports.html">SPORTS</a><i class="fa-solid fa-medal"></i></li>
+      </ul>
 
 
       </header>
